--- a/internal/components/sidecarinjector/testdata/icp-expected-values.yaml
+++ b/internal/components/sidecarinjector/testdata/icp-expected-values.yaml
@@ -20,6 +20,8 @@ deployment:
     value: "true"
   - name: CNI_ANOTHER_ENV_NAME
     value: "standard"
+  cpu:
+    targetAverageUtilization: 80
   nodeSelector:
     disktype: ssd
   affinity:
