--- a/internal/components/sidecarinjector/testdata/icp-test-cr.yaml
+++ b/internal/components/sidecarinjector/testdata/icp-test-cr.yaml
@@ -80,6 +80,8 @@ spec:
       volumeMounts:
       - name: config-vol
         mountPath: /etc/config
+      replicas:
+        targetCPUUtilizationPercentage: 80
       readinessProbe:
         handler:
           exec:
