--- a/internal/assets/manifests/istio-sidecar-injector/templates/deployment.yaml
+++ b/internal/assets/manifests/istio-sidecar-injector/templates/deployment.yaml
@@ -7,7 +7,11 @@ metadata:
 {{- include "generic.labels" . | indent 4 }}
 {{- include "toYamlIf" (dict "value" .Values.deployment.metadata.annotations "key" "annotations" "indent" 2) | indent 2 }}
 spec:
-  replicas: {{ .Values.deployment.replicas.count | default 1 }}
+{{- if not .Values.deployment.autoscaleEnabled }}
+{{- if .Values.deployment.replicaCount }}
+  replicas: {{ .Values.deployment.replicaCount }}
+{{- end }}
+{{- end }}
   selector:
     matchLabels:
 {{- include "pod.labels" . | indent 6 }}
