--- a/internal/components/istiomeshgateway/testdata/imgw-test-cr.yaml
+++ b/internal/components/istiomeshgateway/testdata/imgw-test-cr.yaml
@@ -81,6 +81,7 @@ spec:
       count: 1
       min: 1
       max: 3
+      targetCPUUtilizationPercentage: 80
     podMetadata:
       annotations:
         podannotation: podannotationvalue
