--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -54,6 +54,12 @@ spec:
           properties:
             spec:
               properties:
+                ambientTopology:
+                  properties:
+                    enabled:
+                      nullable: true
+                      type: boolean
+                  type: object
                 caAddress:
                   type: string
                 caProvider:
@@ -9332,6 +9338,12 @@ spec:
           properties:
             spec:
               properties:
+                ambientTopology:
+                  properties:
+                    enabled:
+                      nullable: true
+                      type: boolean
+                  type: object
                 caAddress:
                   type: string
                 caProvider:
